After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700379 - Undisconnected signals from NM's objects
Undisconnected signals from NM's objects
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-05-15 11:18 UTC by Lionel Landwerlin
Modified: 2013-05-15 13:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
network: vpn: disconnect signals from NM's objects (1.29 KB, patch)
2013-05-15 11:19 UTC, Lionel Landwerlin
committed Details | Review

Description Lionel Landwerlin 2013-05-15 11:18:56 UTC
Some signals in the code of the VPN panel are not disconnected when the panel is destroyed.
This could lead to crashes.
Comment 1 Lionel Landwerlin 2013-05-15 11:19:54 UTC
Created attachment 244302 [details] [review]
network: vpn: disconnect signals from NM's objects
Comment 2 Bastien Nocera 2013-05-15 11:24:17 UTC
Review of attachment 244302 [details] [review]:

Looks good.
Comment 3 Lionel Landwerlin 2013-05-15 13:33:19 UTC
Comment on attachment 244302 [details] [review]
network: vpn: disconnect signals from NM's objects

Committed to 3.8 and master.